# todolist

./: stack.yaml  todolist.cabal
app/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs  Main07.hs  Main08.hs  Main09.hs  Main10.hs
src/: Lib06.hs  Lib09.hs  Lib10.hs
static/html/: 404.html  index.html
static/js/: main.js
