name:                todolist
version:             0.1.0.0
synopsis:            Workshop material - TODO List
description:         Please see README.md
homepage:            https://github.com/tr00per/todolist#readme
license:             BSD3
license-file:        LICENSE
author:              Artur Czajka
maintainer:          arturczajka@gmail.com
copyright:           (c) 2016 Artur Czajka
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable todo01
    hs-source-dirs:      app
    main-is:             Main01.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , http-types
                       , wai
                       , warp
    default-language:    Haskell2010

executable todo02
    hs-source-dirs:      app
    main-is:             Main02.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , http-types
                       , wai
                       , warp
    default-language:    Haskell2010

executable todo03
    hs-source-dirs:      app
    main-is:             Main03.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , bytestring
                       , text
                       , http-types
                       , wai
                       , warp
    default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Lib10
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable todo10
  hs-source-dirs:      app
  main-is:             Main10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todolist
  default-language:    Haskell2010

test-suite test10
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec10.hs
  build-depends:       base
                     , todolist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tr00per/todolist
