name:                todolist
version:             0.1.0.0
synopsis:            Workshop material - TODO List
description:         Please see README.md
homepage:            https://github.com/tr00per/todolist#readme
license:             BSD3
license-file:        LICENSE
author:              Artur Czajka
maintainer:          arturczajka@gmail.com
copyright:           (c) 2016 Artur Czajka
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib06, Lib10
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , bytestring
                     , text
                     , http-types
  default-language:    Haskell2010

executable todo01
    hs-source-dirs:      app
    main-is:             Main01.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , http-types
                       , wai
                       , warp
    default-language:    Haskell2010

executable todo02
    hs-source-dirs:      app
    main-is:             Main02.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , http-types
                       , wai
                       , wai-extra
                       , warp
    default-language:    Haskell2010

executable todo03
    hs-source-dirs:      app
    main-is:             Main03.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , http-types
                       , wai
                       , warp
                       , blaze-builder
    default-language:    Haskell2010

executable todo04
    hs-source-dirs:      app
    main-is:             Main04.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , http-types
                       , wai
                       , warp
                       , blaze-builder
    default-language:    Haskell2010

executable todo05
    hs-source-dirs:      app
    main-is:             Main05.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , bytestring
                       , text
                       , http-types
                       , wai
                       , warp
    default-language:    Haskell2010

executable todo06
    hs-source-dirs:      app
    main-is:             Main06.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , todolist
                       , wai
                       , warp
    default-language:    Haskell2010

executable todo07
  hs-source-dirs:      app
  main-is:             Main07.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , wai
                     , warp
                     , aeson
                     , servant-server
  default-language:    Haskell2010

executable todo08
    hs-source-dirs:      app
    main-is:             Main08.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , text
                       , wai
                       , warp
                       , aeson
                       , servant-server == 0.7.*
    default-language:    Haskell2010

executable todo10
  hs-source-dirs:      app
  main-is:             Main10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todolist
  default-language:    Haskell2010

test-suite test10
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec10.hs
  build-depends:       base
                     , todolist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tr00per/todolist
